文字列の修正

--- a/src/api/view/anytime.html
+++ b/src/api/view/anytime.html
@@ -11,7 +11,7 @@
     <th>
     {{range .titles}}
       <a href="{{.Url}}"><p>{{.Title}}</p></a>
-      <p>{{.Info}}</p>
+      <p>{{.Price}}</p>
      {{end}}
     </th>
     </tr>
