価格が安い順で表示されるように変更

--- a/src/api/view/anytime.html
+++ b/src/api/view/anytime.html
@@ -12,6 +12,7 @@
     {{range .titles}}
       <a href="{{.Url}}"><p>{{.Title}}</p></a>
       <p>{{.Price}}</p>
+      <p>{{.Info}}</p>
      {{end}}
     </th>
     </tr>
