コメントの追加と文言の修正

--- a/src/api/view/anytime.html
+++ b/src/api/view/anytime.html
@@ -11,7 +11,7 @@
     <th>
     {{range .titles}}
       <a href="{{.Url}}"><p>{{.Title}}</p></a>
-      <p>{{.Price}}</p>
+      <p>24時間年中無休 ¥{{.Price}}(＋税)/月</p>
       <p>{{.Info}}</p>
      {{end}}
     </th>
