--- a/src/api/view/anytime.html
+++ b/src/api/view/anytime.html
@@ -5,16 +5,16 @@
     <title>エニタイム</title>
   </head>
   <body>
-    <table style="margin: auto;" border="5">
+    <table style="margin: auto" border="5">
       <tr>
-        <h1 style="text-align: center;">{{.message}}</h1>
-        <p style="text-align: center;">月額費の低い順に表示しています！</p>
+        <h1 style="text-align: center">{{.message}}</h1>
+        <p style="text-align: center">月額費の低い順に表示しています！</p>
         <br />
         <th>
           {{range .titles}}
           <a href="{{.Url}}"><p>{{.Title}}</p></a>
           <p>24時間年中無休 ¥{{.Price}}(＋税)/月</p>
-          <p style="width: 70em;">{{.Info}}</p>
+          <p style="width: 70em">{{.Info}}</p>
           <br />
           {{end}}
         </th>
